[workspace]
resolver = "2"
members = [
    "core/crates/*",
    "platforms/desktop",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
repository = "https://example.invalid/neo"

[workspace.dependencies]
# Internal engine crates
neo-core = { path = "core/crates/neo-core" }
neo-crypto = { path = "core/crates/neo-crypto" }
neo-slicing = { path = "core/crates/neo-slicing" }
neo-mix = { path = "core/crates/neo-mix" }
neo-routing = { path = "core/crates/neo-routing" }
neo-transport = { path = "core/crates/neo-transport" }
neo-discovery = { path = "core/crates/neo-discovery" }
neo-credits = { path = "core/crates/neo-credits" }
neo-mpc = { path = "core/crates/neo-mpc" }
neo-verify = { path = "core/crates/neo-verify" }
neo-dataplane = { path = "core/crates/neo-dataplane" }
neo-netstack = { path = "core/crates/neo-netstack" }
neo-node = { path = "core/crates/neo-node" }
neo-ffi = { path = "core/crates/neo-ffi" }
neo-seed = { path = "core/crates/neo-seed" }

# External
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
blake3 = "1"
voprf = { version = "0.5", features = ["ristretto255"] }
rand = "0.8"
chacha20poly1305 = "0.10"
reed-solomon-erasure = "4"
# blahaj: a maintained, bias-free fork of `sharks` that fixes RUSTSEC-2024-0398
# (biased GF(256) coefficients weakening Shamir's information-theoretic secrecy).
# API-compatible drop-in for the `Sharks`/`Share`/`dealer`/`recover` surface used.
blahaj = "0.6"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
# P-256 (RustCrypto, vetted) — used only as an *independent oracle* to validate the
# MPC-TLS ECtF (EC point→x-coordinate share) conversion against real-curve point
# addition; num-bigint provides the F_p arithmetic for the conversion protocol.
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
num-bigint = "0.4"
# Data-parallel garbling/evaluation of large boolean circuits across CPU cores.
rayon = "1"
# Constant-time bignum (RustCrypto) — the ECtF field arithmetic runs over its
# constant-time modular type instead of the variable-time num-bigint.
crypto-bigint = "0.5"
schnorrkel = "0.11"
zeroize = "1"
ml-kem = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
serde_json = "1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
smoltcp = { version = "0.13", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp"] }

[profile.release]
lto = "thin"
codegen-units = 1
