[package]
name = "neo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types, config, and node identity for the neo overlay engine."

[dependencies]
thiserror.workspace = true
serde.workspace = true
blake3.workspace = true
getrandom.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ml-kem.workspace = true
rand_core.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
