[package]
name = "neo-credits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Anonymous, unlinkable bandwidth credits (Sybil resistance + incentives)."

[dependencies]
neo-core.workspace = true
voprf.workspace = true
rand.workspace = true
getrandom.workspace = true
