[package]
name = "neo-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PQ-hybrid handshake, encrypted session, and onion layering for neo."

[dependencies]
neo-core.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
curve25519-dalek.workspace = true
ml-kem.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
blake3.workspace = true
getrandom.workspace = true
rand_core.workspace = true
zeroize.workspace = true
