[package]
name = "neo-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI surface exposing the neo core to the iOS and Android shells."

[lib]
# `cdylib`/`staticlib` are what the mobile shells link against.
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
# Turns on UniFFI scaffolding for generated Swift/Kotlin bindings.
uniffi = ["dep:uniffi"]

[dependencies]
neo-core.workspace = true
uniffi = { version = "0.29", optional = true }
