[package]
name = "neo-mpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Committee exit: threshold secret-sharing of the clearnet request."

[dependencies]
neo-core.workspace = true
blahaj.workspace = true
blake3.workspace = true
curve25519-dalek.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
crypto-bigint.workspace = true
rayon.workspace = true
# Fixed-key AES for the garbled-circuit correlation-robust hash (MMO-σ / Guo'20 MITCCRH).
# Hardware-accelerated: AES-NI on x86_64 (the relays), ARMv8 crypto on aarch64 — via runtime
# detection. ~9x faster per gate than the BLAKE3 RO hash it replaces.
aes = "0.8"
# Live 2PC-TLS (M45): real P-256 curve ops for the split-scalar ECDHE key share.
p256.workspace = true
# Optional: full X.509 chain-building verifier for the live 2PC-TLS handshake.
webpki = { package = "rustls-webpki", version = "0.103", default-features = false, features = [
    "ring",
    "std",
], optional = true }
rustls-pki-types = { version = "1", features = ["std"], optional = true }

[features]
# A webpki-backed ServerCertVerifier (chain-building to trust anchors) for live 2PC-TLS;
# off by default so the crate stays dep-light for its committee-exit use.
live-tls-webpki = ["dep:webpki", "dep:rustls-pki-types"]

[dev-dependencies]
# Test-only oracles: num-bigint (a second bignum library for the field reconstruction),
# hmac/hkdf/sha2 (vetted refs for the 2PC key schedule), rustls/rcgen (a live TLS 1.3
# server to interop-test the live handshake against).
num-bigint.workspace = true
hmac.workspace = true
hkdf.workspace = true
sha2.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rcgen = "0.13"
