[package]
name = "neo-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The neo engine: wires the crates together and runs node roles."

[features]
default = []
# Enables the real TUN device in the data plane (needs root to run).
tun = ["neo-dataplane/tun"]

[dependencies]
neo-core.workspace = true
neo-crypto.workspace = true
neo-slicing.workspace = true
neo-routing.workspace = true
neo-mix.workspace = true
neo-dataplane.workspace = true
neo-netstack.workspace = true
neo-mpc.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true
# The committee member's ephemeral ECDHE scalar share for 2PC-TLS (committee_2pc).
p256.workspace = true
socket2.workspace = true
getrandom.workspace = true
zeroize.workspace = true

[dev-dependencies]
# Frontier crates, used only by the M10–M13 capstone integration test.
neo-credits.workspace = true
neo-verify.workspace = true
# A smoltcp client that dials through the netstack in the tunnel-stack test.
smoltcp.workspace = true
