[package]
name = "neo-slicing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Information slicing: k-of-n erasure/threshold coding of encrypted flows."

[dependencies]
neo-core.workspace = true
chacha20poly1305.workspace = true
reed-solomon-erasure.workspace = true
getrandom.workspace = true
blake3.workspace = true
