[package]
name = "neo-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Verifiable-privacy primitives: VRF, PIR, and ZK proof-of-mixing."

[dependencies]
neo-core.workspace = true
schnorrkel.workspace = true
rand_core.workspace = true
getrandom.workspace = true
blake3.workspace = true
curve25519-dalek.workspace = true
